agregar validaciones y detalles finales para prueba tecnica

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_USER=nvm23   
-DB_PASSWORD=Nvm231191@--
+DB_USER=LOYMARK   
+DB_PASSWORD=L0ym4rk.2021
 DB_PORT=3306
 DB_HOST=localhost
 DB_NAME=API_REGISTRO
